--- a/Hex-flnal-project/src/style.css
+++ b/Hex-flnal-project/src/style.css
@@ -1,88 +1,20 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
+/* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
 */
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
   margin: 0;
   padding: 0;
   border: 0;
@@ -92,17 +24,8 @@ video {
 }
 
 /* HTML5 display-role reset for older browsers */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
   display: block;
 }
 
@@ -110,21 +33,17 @@ body {
   line-height: 1;
 }
 
-ol,
-ul {
+ol, ul {
   list-style: none;
 }
 
-blockquote,
-q {
+blockquote, q {
   quotes: none;
 }
 
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-  content: "";
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
   content: none;
 }
 
@@ -133,17 +52,14 @@ table {
   border-spacing: 0;
 }
 
-*,
-*::after,
-*::before {
+*, *::after, *::before {
   -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  -webkit-transition: all 0.2s;
-  transition: all 0.2s;
+          box-sizing: border-box;
+  -webkit-transition: all .2s;
+  transition: all .2s;
 }
 
-html,
-body {
+html, body {
   line-height: 1.5;
 }
 
@@ -153,7 +69,7 @@ img {
 }
 
 body {
-  font-family: "Noto Sans", sans-serif;
+  font-family: 'Noto Sans', sans-serif;
   font-weight: bold;
 }
 
@@ -173,13 +89,13 @@ body {
   display: flex;
   position: relative;
   -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 @media (max-width: 1110px) {
@@ -196,9 +112,9 @@ body {
 }
 
 .topBar a:hover {
-  color: #6a33f8;
+  color: #6A33F8;
   -webkit-transform: scale(1.05);
-  transform: scale(1.05);
+          transform: scale(1.05);
 }
 
 .topBar-menu {
@@ -206,8 +122,8 @@ body {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  background-color: #ffffff;
+      flex-wrap: wrap;
+  background-color: #FFFFFF;
 }
 
 .topBar-menu.openMenu {
@@ -216,12 +132,12 @@ body {
 
 .topBar-menu a {
   padding: 36px 24px;
-  background-color: #ffffff;
+  background-color: #FFFFFF;
 }
 
 .topBar-menu a:hover {
   -webkit-transform: scale(1);
-  transform: scale(1);
+          transform: scale(1);
 }
 
 .topBar-menu li:last-child a {
@@ -238,8 +154,8 @@ body {
     z-index: 10;
     max-height: 0;
     overflow: hidden;
-    -webkit-transition: all 0.2s;
-    transition: all 0.2s;
+    -webkit-transition: all .2s;
+    transition: all .2s;
   }
   .topBar-menu li {
     width: 100%;
@@ -250,8 +166,8 @@ body {
     font-size: 1rem;
   }
   .topBar-menu a:hover {
-    background-color: #6a33f8;
-    color: #ffffff;
+    background-color: #6A33F8;
+    color: #FFFFFF;
   }
   .topBar-menu li:last-child a {
     padding: 15px;
@@ -264,7 +180,7 @@ body {
 }
 
 .menuToggle:hover {
-  color: #6a33ff;
+  color: #6A33FF;
 }
 
 @media (max-width: 767px) {
@@ -298,7 +214,7 @@ body {
 
 .banner-text {
   position: absolute;
-  color: #ffffff;
+  color: #FFFFFF;
   font-size: 2rem;
   left: 50px;
   bottom: 50px;
@@ -316,15 +232,15 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   margin-bottom: 60px;
 }
 
 .bedAdvantage-img {
   max-height: 140px;
   -o-object-fit: cover;
-  object-fit: cover;
+     object-fit: cover;
   margin-bottom: 10px;
 }
 
@@ -334,7 +250,7 @@ body {
 }
 
 .furniture-compare {
-  background-color: #f8f8f8;
+  background-color: #F8F8F8;
   padding: 50px 0 60px 0;
 }
 
@@ -355,8 +271,7 @@ body {
   margin: 0 auto;
 }
 
-.compare-table th,
-.compare-table td {
+.compare-table th, .compare-table td {
   text-align: center;
   padding: 15px 0;
 }
@@ -366,7 +281,7 @@ body {
 }
 
 .compare-table tr {
-  border-bottom: 1px solid #b9b9b9;
+  border-bottom: 1px solid #B9B9B9;
 }
 
 .compare-table tr td:first-child {
@@ -375,17 +290,16 @@ body {
 }
 
 .compare-table .material-icons {
-  color: #6a33ff;
+  color: #6A33FF;
   -webkit-transform: scale(1.5);
-  transform: scale(1.5);
+          transform: scale(1.5);
 }
 
 @media (max-width: 767px) {
   .compare-table {
     width: 500px;
   }
-  .compare-table th,
-  .compare-table td {
+  .compare-table th, .compare-table td {
     padding: 10px 0;
   }
   .compare-table th {
@@ -401,12 +315,12 @@ body {
 }
 
 .recommendation {
-  background-color: #301e5f;
+  background-color: #301E5F;
   padding: 60px 0;
 }
 
 .recommendation h3 {
-  color: #ffffff;
+  color: #FFFFFF;
 }
 
 @media (max-width: 767px) {
@@ -427,8 +341,7 @@ body {
   display: none;
 }
 
-.gallery-top,
-.gallery-bottom {
+.gallery-top, .gallery-bottom {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -445,7 +358,7 @@ body {
   display: flex;
   margin-left: 30px;
   min-width: 350px;
-  background-color: #ffffff;
+  background-color: #FFFFFF;
 }
 
 .recommendation-card img {
@@ -463,11 +376,11 @@ body {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .recommend-img {
@@ -475,8 +388,8 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin-bottom: 3px;
 }
 
@@ -488,7 +401,7 @@ body {
 
 .recommend-text {
   font-size: 0.875rem;
-  color: #6a33f8;
+  color: #6A33F8;
 }
 
 .transport {
@@ -506,11 +419,11 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   max-width: 700px;
   margin: 0 auto;
 }
@@ -519,20 +432,16 @@ body {
   .transport-intro {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
 }
 
-.transport-intro li:nth-child(1),
-.transport-intro li:nth-child(2),
-.transport-intro li:nth-child(3) {
+.transport-intro li:nth-child(1), .transport-intro li:nth-child(2), .transport-intro li:nth-child(3) {
   position: relative;
 }
 
-.transport-intro li:nth-child(1)::after,
-.transport-intro li:nth-child(2)::after,
-.transport-intro li:nth-child(3)::after {
+.transport-intro li:nth-child(1)::after, .transport-intro li:nth-child(2)::after, .transport-intro li:nth-child(3)::after {
   content: "";
   position: absolute;
   top: 49px;
@@ -544,9 +453,7 @@ body {
 }
 
 @media (max-width: 767px) {
-  .transport-intro li:nth-child(1)::after,
-  .transport-intro li:nth-child(2)::after,
-  .transport-intro li:nth-child(3)::after {
+  .transport-intro li:nth-child(1)::after, .transport-intro li:nth-child(2)::after, .transport-intro li:nth-child(3)::after {
     position: static;
     margin-top: 25px;
     border: 10px solid #000000;
@@ -561,15 +468,15 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .transport-card .cardImg {
@@ -581,11 +488,11 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin-bottom: 8px;
 }
 
@@ -610,7 +517,7 @@ body {
 }
 
 .productSelect {
-  border: 1px solid #b9b9b9;
+  border: 1px solid #B9B9B9;
   color: #797979;
   min-height: 38px;
   min-width: 255px;
@@ -624,7 +531,7 @@ body {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .productCard {
@@ -638,7 +545,7 @@ body {
   min-height: 300px;
   width: 100%;
   -o-object-fit: cover;
-  object-fit: cover;
+     object-fit: cover;
 }
 
 .productCard a {
@@ -653,11 +560,10 @@ body {
 }
 
 .productCard a:hover {
-  background-color: #301e5f;
+  background-color: #301E5F;
 }
 
-.productCard a,
-.productCard h3 {
+.productCard a, .productCard h3 {
   font-size: 1.25rem;
 }
 
@@ -691,7 +597,7 @@ body {
 }
 
 .shoppingCart {
-  background-color: #f8f8f8;
+  background-color: #F8F8F8;
   padding: 60px 0;
 }
 
@@ -701,8 +607,7 @@ body {
   font-size: 1.25rem;
 }
 
-.shoppingCart-table th,
-.shoppingCart-table td {
+.shoppingCart-table th, .shoppingCart-table td {
   padding: 15px;
   vertical-align: middle;
 }
@@ -712,11 +617,10 @@ body {
 }
 
 .shoppingCart-table tr {
-  border-bottom: 1px solid #b9b9b9;
+  border-bottom: 1px solid #B9B9B9;
 }
 
-.shoppingCart-table tr:first-child,
-.shoppingCart-table tr:last-child {
+.shoppingCart-table tr:first-child, .shoppingCart-table tr:last-child {
   border-bottom: 0;
 }
 
@@ -731,8 +635,8 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .cardItem-title img {
@@ -753,9 +657,9 @@ body {
 }
 
 .discardBtn a:hover {
-  color: #6a33f8;
+  color: #6A33F8;
   -webkit-transform: scale(1.3);
-  transform: scale(1.3);
+          transform: scale(1.3);
 }
 
 .discardAllBtn {
@@ -770,7 +674,7 @@ body {
 
 .discardAllBtn:hover {
   background-color: #000000;
-  color: #ffffff;
+  color: #FFFFFF;
 }
 
 .orderInfo {
@@ -794,7 +698,7 @@ body {
 .orderInfo-input {
   width: 100%;
   min-height: 38px;
-  border: 1px solid #ced4da;
+  border: 1px solid #CED4DA;
   border-radius: 5px;
   text-indent: 1rem;
   margin-right: 10px;
@@ -810,15 +714,15 @@ body {
   left: 103%;
   top: 50%;
   -webkit-transform: translateY(-50%);
-  transform: translateY(-50%);
-  color: #c72424;
+          transform: translateY(-50%);
+  color: #C72424;
 }
 
 @media (max-width: 767px) {
   .orderInfo-message {
     position: static;
     -webkit-transform: translateY(0);
-    transform: translateY(0);
+            transform: translateY(0);
   }
 }
 
@@ -827,7 +731,7 @@ body {
   min-width: 255px;
   min-height: 48px;
   background-color: #000000;
-  color: #ffffff;
+  color: #FFFFFF;
   border: 0;
   cursor: pointer;
   font-size: 1.25rem;
@@ -836,7 +740,7 @@ body {
 }
 
 .orderInfo-btn:hover {
-  background-color: #301e5f;
+  background-color: #301E5F;
 }
 
 .orderPage-list {
@@ -846,13 +750,13 @@ body {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .orderPage-list .discardAllBtn {
   -ms-flex-item-align: end;
-  align-self: flex-end;
+      align-self: flex-end;
   margin-bottom: 12px;
 }
 
@@ -861,8 +765,7 @@ body {
   width: 100%;
 }
 
-.orderPage-table th,
-.orderPage-table td {
+.orderPage-table th, .orderPage-table td {
   padding: 10px;
   text-align: left;
   border: 1px solid #000000;
@@ -876,7 +779,7 @@ body {
 
 .delSingleOrder-Btn {
   display: block;
-  background-color: #c44021;
+  background-color: #C44021;
   color: #fff;
   border: 0;
   padding: 5px 10px;
@@ -900,7 +803,7 @@ body {
   left: 0;
   display: block;
   text-decoration: none;
-  color: #ffffff;
+  color: #FFFFFF;
 }
 
 .orderStatus-unDone {
