Finished empty cart message feature

--- a/Hex-flnal-project/src/style.css
+++ b/Hex-flnal-project/src/style.css
@@ -601,6 +601,11 @@ body {
   padding: 60px 0;
 }
 
+.emptyCartMessage {
+  text-align: center;
+  font-size: 30px;
+}
+
 .shoppingCart-table {
   margin: 0 auto;
   border-collapse: collapse;
